--- a/style.css
+++ b/style.css
@@ -7,3 +7,4 @@
 @import url('./css/layout.css');
 @import url('./css/components.css');
 @import url('./css/dashboard.css');
+@import url('./css/travel.css');
